--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+### Node
+
 # Logs
 logs
 *.log
@@ -31,3 +33,11 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+### IntelliJ
+
+# iml
+*.iml
+
+# .idea
+.idea
